    - Updated copyright notice in defines.h.
    - Bitmap::getPixel() works correctly for large bitmaps.
    - Bitmap::drawBitmap() flushes mem correctly for DMA copy.
    - Gadget::show() clears rect cache of sibling gadgets with a lower z-index
      to ensure that they do not draw over the top of the newly-shown gadget.
  
  - New Features:
    - TextBox and MultiLineTextBox cursor moves when d-pad left/right are
      pressed and gadget has focus.
    - Added tests folder:
      - CycleButton test;
      - RadioButtonGroup test.
    - Added BinaryFile class to bonus folder.
    - Added BitmapIO class to bonus folder - load/save BMP files using libfat.
    - Added BitmapLoader example.
    - Added SuperBitmap::drawBitmap() overload to handle Bitmap objects.
  

  V0.38 (20090428)
  
  - Fixes:
     - Removed PALib dependency from filerequester example.
     - FileRequester gadget fixed for devKitARM r24 (Quirky).
     - ListBox redraws correctly when an option is selected in single selection
       mode.
     - Fixed crash in SliderVertical when trying to set value if max and min
       values are the same (Quirky).
     - Fixed crash in SliderHorizontal when trying to set value if max and min
       values are the same.
     - Fixed FileRequester crash when path has trailing slash (Quirky).
     - Fixed double-click in SDL (Quirky).
     - FileRequester fixed for SDL (Quirky).
     - SDL path fixes (Quirky).
	 - Escape key to quit in SDL mode (Quirky).
     - WindowBorderTop and SkinnedWindowBorderTop no longer have pointers to
       freed memory if window title changes (Quirky).
     - ScreenTitle and SkinnedScreenTitle no longer have pointers to freed
       memory if screen title changes (Quirky).
     - Flipping window depth with depth gadget no longer results in corrupted
       window contents.
     - Fixed const-correctness of various Text class methods.
     - SDL framebuffers initialised to black.
     - More doxygen fixes.