@@ -135,8 +135,8 @@ void AmigaWindow::createBorder() {
 
 bool AmigaWindow::click(s16 x, s16 y) {
 
-	if (isEnabled()) {
-		if (checkCollision(x, y)) {
+	if (checkCollision(x, y)) {
+		if (isEnabled()) {
 
 			raiseToTop();
 
@@ -158,9 +158,9 @@ bool AmigaWindow::click(s16 x, s16 y) {
 			}
 
 			raiseClickEvent(x, y);
-
-			return true;
 		}
+
+		return true;
 	}
 
 	return false;
