@@ -36,7 +36,11 @@ void BitmapButton::draw(Rect clipRect) {
 
 bool BitmapButton::click(s16 x, s16 y) {
 	if (Gadget::click(x, y)) {
-		redraw();
+
+		if (isEnabled()) {
+	 		redraw();
+		}
+
 		return true;
 	}
 
