@@ -33,7 +33,11 @@ void ContextMenuItem::draw(Rect clipRect) {
 
 bool ContextMenuItem::click(s16 x, s16 y) {
 	if (Gadget::click(x, y)) {
-		redraw();
+
+		if (isEnabled()) {
+			redraw();
+		}
+
 		return true;
 	}
 
