@@ -63,7 +63,9 @@ void RadioButton::draw(Rect clipRect) {
 bool RadioButton::click(s16 x, s16 y) {
 	if (Button::click(x, y)) {
 
-		setState(RADIO_BUTTON_STATE_ON);
+		if (isEnabled()) {
+			setState(RADIO_BUTTON_STATE_ON);
+		}
 
 		return true;
 	}
