@@ -60,15 +60,16 @@ void Screen::draw(Rect clipRect) {
 
 bool Screen::click(s16 x, s16 y) {
 	
-	if (isEnabled()) {
-		if (checkCollision(x, y)) {
+	if (checkCollision(x, y)) {
 			
-			// Work out which child was clicked
-			for (s32 i = _gadgets.size() - 1; i > -1; i--) {
-				if (_gadgets[i]->click(x, y)) {
-					return true;
-				}
+		// Work out which child was clicked
+		for (s32 i = _gadgets.size() - 1; i > -1; i--) {
+			if (_gadgets[i]->click(x, y)) {
+				return true;
 			}
+		}
+
+		if (isEnabled()) {
 			
 			// Handle clicks on this
 			_flags.clicked = true;
@@ -82,9 +83,9 @@ bool Screen::click(s16 x, s16 y) {
 			}
 			
 			raiseClickEvent(x, y);
-			
-			return true;
 		}
+			
+		return true;
 	}
 	
 	return false;
